# MacProT2FanRD

./: Cargo.toml  README.md  config.toml  flake.nix  macprot2fans.toml
src/: config.rs  error.rs  fan_controller.rs  main.rs  wizard.rs
src/fan/: controller.rs  discovery.rs  mod.rs
src/sensor/: discovery.rs  mod.rs  registry.rs
