[package]
name = "macproT2fans"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Simple Fan Daemon for T2 Macs"
repository = "https://github.com/TLN992/MacProT2FanRD"

[dependencies]
glob = { version = "0.3.3", default-features = false }
libc = { version = "0.2", default-features = false }
serde = { version = "1", features = ["derive"] }
signal-hook = { version = "0.3", default-features = false }
toml = "0.8"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
